--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 gradio-image-prompter
 sentencepiece
-torch==2.1.0
-https://github.com/Dao-AILab/flash-attention/releases/download/v2.3.6/flash_attn-2.3.6+cu122torch2.1cxx11abiFALSE-cp310-cp310-linux_x86_64.whl
+pydantic==1.10.11
